--- a/public/index.css
+++ b/public/index.css
@@ -1,84 +1,139 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Proza+Libre:wght@600&display=swap");
+
 body {
   margin: 0;
   padding: 0;
   min-height: 100vh;
   overflow: hidden;
+  background: linear-gradient(to right, #3494e6, #ec6ead);
+  box-sizing: border-box;
 }
 
-.landing {
+.nav-bar {
   display: flex;
-  flex-direction: column;
-  height: 100vh;
-  justify-content: center;
-  align-items: center;
-  font-size: 1.5rem;
-  /* background: #0f2027;
-  background: -webkit-linear-gradient(to right, #2c5364, #203a43, #0f2027);
-  background: linear-gradient(to right, #2c5364, #203a43, #0f2027); */
-  background: linear-gradient(to right, #283048, #859398);
+  justify-content: space-between;
+  margin: 10px;
+  padding: 10px;
+  color: white;
 }
 
-.card-title {
-  /* display: flex;
-  justify-content: center; */
-  text-align: center;
-  margin-bottom: 30%;
-  font-size: 2rem;
-  font-weight: 700;
-  font-family: "Proza Libre", sans-serif;
+.logo {
+  font-size: 1.7rem;
 }
 
-.home-card {
-  box-shadow: 7px 5px 10px;
-  padding: 10%;
-  border-radius: 5%;
-  /* background-image: linear-gradient(135deg, #f05f57 10%, #360940 100%); */
-  background-image: linear-gradient(to right, #eacda3, #d6ae7b);
-  transform: translateY(30%);
-  opacity: 0.2;
-  transition: 0.7s;
-}
-
-.redirect-cards {
+.links {
   font-size: 1.3rem;
-  font-weight: 700;
-  font-family: "Proza Libre", sans-serif;
-  color: darkgray;
-  transform: translateY(-50%);
 }
 
-.redirect-cards a {
+.links a {
+  font-weight: 600;
+  border: 3px solid white;
+  padding: 5px 30px;
+  border-radius: 20%/50%;
   text-decoration: none;
-  margin: 5px;
-  color: black;
-  border: 4px solid darkgray;
-  border-radius: 7%;
-  /* background: rgb(204, 125, 125); */
-  background: #623aa2;
-  padding: 5px 10px;
-  transition: 0.3s;
-}
-
-.redirect-cards a:hover {
-  /* color: white; */
-  background: #fdcbf1;
-}
-
-.flex-center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.btn-std {
-  background: rgba(32, 178, 171, 0.034);
-  border-bottom: 5px solid cadetblue;
-  padding: 2px 15px;
-  font-size: 1rem;
-  cursor: pointer;
+  color: white;
   transition: 0.5s;
 }
 
-.btn-std:hover {
-  background: coral;
+.links a:hover {
+  background: #3493e6dc;
+}
+
+.cta {
+  position: absolute;
+  color: white;
+  font-family: "Poppins", sans-serif;
+  top: 40%;
+  left: 45%;
+  transform: translate(-50%);
+  overflow: hidden;
+  height: 50px;
+  width: 75%;
+  border-bottom: 3px solid whitesmoke;
+}
+
+.cta h1 {
+  position: absolute;
+  transition: 0.3s;
+  /* bottom: 0; */
+  top: 200%;
+}
+
+.sign-up {
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%);
+  font-size: 1.4rem;
+}
+
+.sign-up a {
+  font-weight: 600;
+  border: 3px solid white;
+  padding: 5px 30px;
+  border-radius: 20%/50%;
+  text-decoration: none;
+  color: white;
+  transition: 0.5s;
+  background: rgba(32, 178, 171);
+}
+
+.sign-up a:hover {
+  background: lightcoral;
+}
+
+/* Media Queries */
+
+@media (max-width: 768px) {
+  .logo {
+    font-size: 1.5rem;
+  }
+
+  .links {
+    font-size: 1.1rem;
+  }
+
+  .links a {
+    border: 2px solid white;
+    padding: 5px 26px;
+  }
+
+  .cta h1 {
+    font-size: 27px;
+  }
+
+  .sign-up {
+    font-size: 1.2rem;
+  }
+
+  .sign-up a {
+    padding: 5px 27px;
+  }
+}
+
+@media (max-width: 500px) {
+  .logo {
+    font-size: 1.3rem;
+  }
+
+  .links {
+    font-size: 1rem;
+  }
+
+  .links a {
+    border: 2px solid white;
+    padding: 5px 22px;
+  }
+
+  .cta h1 {
+    font-size: 20px;
+  }
+
+  .sign-up {
+    font-size: 1rem;
+  }
+
+  .sign-up a {
+    padding: 5px 22px;
+  }
 }
