added public direct

--- a/views/posts-public.ejs
+++ b/views/posts-public.ejs
@@ -9,7 +9,7 @@
   <body>
     <div class="dashboard-container">
       <div class="user-header">
-        <p id="logo">LOGO</p>
+        <a href="dashboard.html" id="logo">LOGO</a>
         <div class="ham-btn">
           <svg
             xmlns="http://www.w3.org/2000/svg"
