--- a/public/dashboard.css
+++ b/public/dashboard.css
@@ -174,6 +174,14 @@ a {
   border-bottom: 2px solid lightblue;
 }
 
+.public-direct {
+  display: flex;
+  justify-content: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-style: italic;
+  margin-top: 30px;
+}
+
 .posts {
   position: relative;
   margin-top: 130px;
